# orie5270-nyc-taxi-forecast

./: .gitignore  README.md  pyproject.toml
analysis/: README.md
data/: README.md
src/nyc_taxi_forecast/: __main__.py  aggregate.py  baseline.py  clean.py  cli.py  evaluate.py  io.py  panel.py  pipeline.py  web.py
src/nyc_taxi_forecast/static/: ATTRIBUTIONS.txt  predict.html  taxi_zones.geojson
tests/: test_aggregate.py  test_aggregate_extra.py  test_baseline.py  test_baseline_errors.py  test_clean.py  test_clean_errors.py  test_cli.py  test_io.py  test_panel.py  test_panel_extra.py  test_pipeline_e2e.py  test_web.py
